# multibeast

./: .coveragerc  .gitmodules  CONTRIBUTING.md  README.md  setup.cfg  setup.py
.github/action-scripts/: install_cuda_ubuntu.sh
.github/workflows/: release.yml  tests.yml
docs/source/api/: agents.md  index.md
examples/atari/: README.md  config.yaml  environment.py  impala.py  resnet.py
examples/dmc/: README.md  config.yaml  env_wrappers.py  environment.py  impala.py
multibeast/: builder.py  version.py
multibeast/agents/: __init__.py  agent_example.py  example_agent.py  multihydra.py  policy_nets.py  policynet.py
multibeast/agents/impala/: __init__.py  impala.py  impala_net.py  impalanet.py  policynet.py  vtrace.py
multibeast/distributions/: __init__.py  discretized_logistic_mixture.py  squashed_diag_gaussian.py  tanh_normal.py
multibeast/envpool/: envbatchstate.py  envpool.py  envstepper.py
multibeast/utils/: __init__.py  get_action_params.py  registry.py
tests/: mock_env.py  test_builder.py  test_distributions.py
tests/agents/: test_impala.py  test_losses.py  test_vtrace.py
