[metadata]
long_description=file: README.md
long_description_content_type=text/markdown

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[flake8]
ignore =
    B001,  # Do not use bare `except:`
    B008,  # Do not perform calls in argument defaults.
    B950,  # line too long
    C901,  # Function is too complex
    E203,  # Whitespace before ':' (breaks black)
    E266,  ## Too many leading '#' for block comment
    E302,  # Expected 2 blank lines, found 0
    E501,  # Line too long
    E722,  # do not use bare 'except'
    E731,  # Do not assign a lambda expression, use a def
    W503   # Line break occurred before a binary operator
select = B,C,E,F,W,T4,B9
# The GitHub editor is 127 chars wide
max-line-length = 127
max-complexity = 18
exclude =
    .git,
    __pycache__,
    docs,
    build,
    third_party

[isort]
profile = black
line_length = 127
multi_line_output = 3
include_trailing_comma = True
